Bug#32760 - correction of merge error with CGE 6.3